--- a/pubs.bib
+++ b/pubs.bib
@@ -22,6 +22,7 @@ selected   :: Selected papers
   year={2016},
   topics={optical},
   URL={papers/imc2016-opticalfailures.pdf},
+  note={Best Dataset Award}
 }
 
 @inproceedings{fayaz2016,
@@ -40,6 +41,7 @@ selected   :: Selected papers
   year={2016},
   topics={protocols},
   URL={papers/hvc2016-ddnf.pdf},
+  note={Best Paper Award}
 }
 
 @inproceedings{beckett2016,
