adding footprint TR and fixed punctuation issues

--- a/pubs.bib
+++ b/pubs.bib
@@ -115,6 +115,7 @@ selected   :: Selected papers
   year={2016},
   topics={sdn, resource},
   URL={papers/nsdi2016-footprint.pdf},
+  resource={<a href=papers/tr2016-footprint.pdf>Technical report</a>}
 }
 
 
