added missing commas

--- a/pubs.bib
+++ b/pubs.bib
@@ -49,7 +49,7 @@ selected   :: Selected papers
   author={Ryan Beckett and Ratul Mahajan and Jitu Padhye and Todd Millstein and David Walker},
   booktitle={SIGCOMM},
   year={2016},
-  note={Best Paper Award}
+  note={Best Paper Award},
   topics={protocols},
   URL={papers/sigcomm2016-propane.pdf},
 }
@@ -143,8 +143,8 @@ selected   :: Selected papers
   title={Measuring and Troubleshooting Large Operational Multipath Networks with Gray Box Testing},
   author={Hongyi Zeng and Ratul Mahajan and  Nick McKeown and George Varghese and Lihua Yuan and Ming Zhang},
   year={2015},
-  howpublished={MSR technical report MSR-TR-2015-55}
-  topics={astronomy, diagnosis}
+  howpublished={MSR technical report MSR-TR-2015-55},
+  topics={astronomy, diagnosis},
   URL={papers/tr2015-netsonar.pdf}
 }
 
@@ -178,18 +178,18 @@ selected   :: Selected papers
 @inproceedings{fogel2015general,
   author={Ari Fogel and Stanley Fung and Luis Pedrosa and Meg Walraed-Sullivan and Ramesh Govindan and Ratul Mahajan and Todd Millstein},
   title={A general approach to network configuration analysis},
-  booktitle={NSDI}
-  year={2015}
-  URL={papers/nsdi2015-batfish.pdf}
+  booktitle={NSDI},
+  year={2015},
+  URL={papers/nsdi2015-batfish.pdf},
   topics={protocols} 
 }
 
 @inproceedings{pedrosa2015analyzing,
   author={Luis Pedrosa and Ari Fogel and Nupur Kothari and Ramesh Govindan and Ratul Mahajan and Todd Millstein},
   title={Analyzing protocols implementations for interoperability},
-  booktitle={NSDI}
-  year={2015}
-  URL={papers/nsdi2015-pic.pdf}
+  booktitle={NSDI},
+  year={2015},
+  URL={papers/nsdi2015-pic.pdf},
   topics={protocols} 
 }
 
@@ -198,47 +198,47 @@ selected   :: Selected papers
 @inproceedings{akella2014call,
   author={Aditya Akella and Ratul Mahajan},
   title={A call to arms for management plane analytics},
-  booktitle={HotNets}
-  year={2014}
-  URL={papers/hotnets2014-mgmtanalytics.pdf}
+  booktitle={HotNets},
+  year={2014},
+  URL={papers/hotnets2014-mgmtanalytics.pdf},
   topics={misc} 
 }
 
 @inproceedings{chu2014strack,
   author={Chun-Te Chu and Jaeyeon Jung and Zicheng Liu and Ratul Mahajan},
   title={sTrack: Secure tracking in community surveillance},
-  booktitle={ACM Multimedia}
-  year={2014}
-  URL={papers/mm2014-strack.pdf}
+  booktitle={ACM Multimedia},
+  year={2014},
+  URL={papers/mm2014-strack.pdf},
   topics={home} 
 }
 
 @inproceedings{liu2014traffic,
   author={Hongqiang Harry Liu and Srikanth Kandula and Ratul Mahajan and Ming Zhang and David Gelernter},
   title={Traffic Engineering with Forward Fault Correction},
-  booktitle={ACM SIGCOMM}
-  year={2014}
-  URL={papers/sigcomm2014-ffc.pdf}
-  resource={<a href=papers/tr2014-ffc-appendix.pdf>Appendix</a>}
+  booktitle={ACM SIGCOMM},
+  year={2014},
+  URL={papers/sigcomm2014-ffc.pdf},
+  resource={<a href=papers/tr2014-ffc-appendix.pdf>Appendix</a>},
   topics={sdn} 
 }
 
 @inproceedings{jin2014dynamic,
    author={Xin Jin and Hongqiang Harry Liu and Rohan Gandhi and Srikanth Kandula and Ratul Mahajan and Ming Zhang and Jennifer Rexford and Roger Wattenhofer},
    title={Dynamic Scheduling of Network Updates},
-   booktitle={ACM SIGCOMM}
-   year={2014}
-   URL={papers/sigcomm2014-dionysus.pdf}
-   resource={<a href=papers/tr2014-dionysus.pdf>Extended version</a>}
+   booktitle={ACM SIGCOMM},
+   year={2014},
+   URL={papers/sigcomm2014-dionysus.pdf},
+   resource={<a href=papers/tr2014-dionysus.pdf>Extended version</a>},
    topics={sdn} 
 }
 
 @inproceedings{sun2014network,
    author={Peng Sun and Ratul Mahajan and Jennifer Rexford and Lihua Yuan and Ming Zhang and Ahsan Arefin}, 
    title={A Network-State Management Service},
-   booktitle={ACM SIGCOMM}
-   year={2014}
-   URL={papers/sigcomm2014-statesman.pdf}
+   booktitle={ACM SIGCOMM},
+   year={2014},
+   URL={papers/sigcomm2014-statesman.pdf},
    topics={sdn}
 }
        
@@ -246,9 +246,9 @@ selected   :: Selected papers
    author={Radhika Niranjan Mysore and Ratul Mahajan and Amin Vahdat and George Varghese},
    title={Gestalt: Fast, unified fault localization for networked systems},
    booktitle={Usenix Annual Technical Conference (ATC)},
-   year={2014}
-   topics={diagnosis}
-   URL={papers/atc2014-gestalt.pdf}
+   year={2014},
+   topics={diagnosis},
+   URL={papers/atc2014-gestalt.pdf},
    resource={<a href=papers/tr2013-gestalt.pdf>Technical report</a>}
 }
 
@@ -269,7 +269,7 @@ selected   :: Selected papers
   booktitle={HotNets},
   year={2013},
   topics={sdn},
-  URL={papers/hotnets2013-sdnupdates.pdf}
+  URL={papers/hotnets2013-sdnupdates.pdf},
   resource={<a href=papers/tr2013-sdnupdates.pdf>Extended version</a>}
 }
 
@@ -297,7 +297,7 @@ selected   :: Selected papers
   booktitle={SIGCOMM},
   year={2013},
   topics={sdn},
-  URL={papers/sigcomm2013-swan.pdf}
+  URL={papers/sigcomm2013-swan.pdf},
   resource={<a href=papers/tr2013-swan.pdf>Extended version</a>}
 }
 
@@ -355,8 +355,8 @@ selected   :: Selected papers
   author={Ratul Mahajan and Jitendra Padhye and Sharad Agarwal and Brian Zill},
   booktitle={Usenix Annual Technical Conference (ATC)},
   year={2012},
-  topics={vehicular mobile}
-  URL={papers/usenix2012-pluribus.pdf}
+  topics={vehicular mobile},
+  URL={papers/usenix2012-pluribus.pdf},
   resource={<a href=papers/tr2009-pluribus.pdf>Extended version</a>}
 }
 
@@ -365,7 +365,7 @@ selected   :: Selected papers
   author={Colin Dixon and Ratul Mahajan and Sharad Agarwal and AJ Brush and Bongshin Lee and Stefan Saroiu and Paramvir Bahl},
   booktitle={Networked systems design and implementation (NSDI)},
   year={2012},
-  topics={home}
+  topics={home},
   URL={papers/nsdi2012-homeos.pdf}
 }
 
@@ -377,7 +377,7 @@ selected   :: Selected papers
   author={Abhinav Pathak and Ming Zhang and Y. Charlie Hu and Ratul Mahajan and Dave Maltz},
   booktitle={Internet measurement conference (IMC)},
   year={2011},
-  topics={astronomy}
+  topics={astronomy},
   URL={papers/imc2011-mpls-latency.pdf}
 }
 
@@ -385,8 +385,8 @@ selected   :: Selected papers
   title={Finding protocol manipulation attacks},
   author={Nupur Kothari and Ratul Mahajan and Todd Millstein and Ramesh Govindan and Madan Musuvathi},
   booktitle={SIGCOMM},
-  year={2011}
-  topics={protocols}
+  year={2011},
+  topics={protocols},
   URL={papers/sigcomm2011-max.pdf}
 }
 
@@ -394,9 +394,9 @@ selected   :: Selected papers
   title={Human-Guided Machine Learning for Fast and Accurate Network Alarm Triage},
   author={Saleema Amershi and Bongshin Lee and Ashish Kapoor and Ratul Mahajan and Blaine Christian},
   booktitle={International Joint Conference on Artificial Intelligence (IJCAI)},
-  year={2011}
+  year={2011},
   note={Invited from CHI 2011 to Best Papers Track},
-  topics={diagnosis}
+  topics={diagnosis},
   URL={papers/ijcai2011-cuet.pdf}
 }
 
@@ -406,8 +406,8 @@ selected   :: Selected papers
   journal={Communications of the ACM (CACM)},
   volume={54},
   number={6},
-  year={2011}
-  topics={home}
+  year={2011},
+  topics={home},
   URL={papers/cacm2011-advancing-home.pdf}
 }
 
@@ -416,7 +416,7 @@ selected   :: Selected papers
   author={Hossein Falaki and Ratul Mahajan and Deborah Estrin},
   booktitle={MobiArch workshop},
   year={2011},
-  topics={mobile}
+  topics={mobile},
   URL={papers/mobiarch2011-systemsens.pdf}
 }
 
@@ -425,8 +425,8 @@ selected   :: Selected papers
   author={Saleema Amershi and Bongshin Lee and Ashish Kapoor and Ratul Mahajan and Blaine Christian},
   booktitle={CHI},
   year={2011},
-  note={Honorable Mention Award}
-  topics={diagnosis}
+  note={Honorable Mention Award},
+  topics={diagnosis},
   URL={papers/chi2011-cuet.pdf}
 }
 
@@ -435,7 +435,7 @@ selected   :: Selected papers
   author={AJ Brush and Bongshin Lee and Ratul Mahajan and Sharad Agarwal and Stefan Saroiu and Colin Dixon},
   booktitle={CHI},
   year={2011},
-  topics={home}
+  topics={home},
   URL={papers/chi2011-homeos.pdf}
 }
 
@@ -446,7 +446,7 @@ selected   :: Selected papers
   author={Colin Dixon and Ratul Mahajan and Sharad Agarwal and AJ Brush and Bongshin Lee and Stefan Saroiu and Paramvir Bahl},
   booktitle={HotNets},
   year={2010},
-  topics={home}
+  topics={home},
   URL={papers/hotnets2010-homeos.pdf}
 }
 
@@ -455,7 +455,7 @@ selected   :: Selected papers
   author={Sharad Agarwal and Ratul Mahajan and Alice Zheng and Paramvir Bahl},
   booktitle={HotNets},
   year={2010},
-  topics={diagnosis mobile}
+  topics={diagnosis mobile},
   URL={papers/hotnets2010-mobibug.pdf}
 }
 
@@ -464,7 +464,7 @@ selected   :: Selected papers
   author={Hossein Falaki and Dimitrios Lymberopoulos and Ratul Mahajan and Srikanth Kandula and Deborah Estrin},
   booktitle={Internet measurement conference (IMC)},
   year={2010},
-  topics={mobile}
+  topics={mobile},
   URL={papers/imc2010-smartphone-traffic.pdf}
 }
 
@@ -472,8 +472,8 @@ selected   :: Selected papers
   title={Netclinic: Interactive visualization to enhance automated fault diagnosis in enterprise networks},
   author={Zhicheng Liu and Bongshin Lee and Srikanth Kandula and Ratul Mahajan},
   journal={Visual Analytics Science and Technology (VAST)},
-  year={2010}
-  topics={diagnosis}
+  year={2010},
+  topics={diagnosis},
   URL={papers/vast2010-netclinic.pdf}
 }
 
@@ -482,7 +482,7 @@ selected   :: Selected papers
   author={Frank McSherry and Ratul Mahajan},
   booktitle={SIGCOMM},
   year={2010},
-  topics={misc}
+  topics={misc},
   URL={papers/sigcomm2010-privacy.pdf}
 }
 
@@ -491,7 +491,7 @@ selected   :: Selected papers
   author={Aruna Balasubramanian and Ratul Mahajan and Arun Venkataramani},
   booktitle={MobiSys},
   year={2010},
-  topics={vehicular mobile}
+  topics={vehicular mobile},
   URL={papers/mobisys2010-wiffler.pdf}
 }
 
@@ -500,7 +500,7 @@ selected   :: Selected papers
   author={Hossein Falaki and Ratul Mahajan and Srikanth Kandula and Dimitrios Lymberopoulos and Ramesh Govindan and Deborah Estrin},
   booktitle={MobiSys},
   year={2010},
-  topics={mobile}
+  topics={mobile},
   URL={papers/mobisys2010-diversity.pdf}
 }
 
@@ -509,7 +509,7 @@ selected   :: Selected papers
   author={Marcel Dischinger and Max Marcon and Saikat Guha and Krishna Gummadi and Ratul Mahajan and Stefan Saroiu},
   booktitle={Networked systems design and implementation (NSDI)},
   year={2010},
-  topics={astronomy}
+  topics={astronomy},
   URL={papers/nsdi2010-glasnost.pdf}
 }
 
@@ -518,7 +518,7 @@ selected   :: Selected papers
   author={Zheng Zhang and Ming Zhang and Albert Greenberg and Y. Charlie Hu and Ratul Mahajan and Blaine Christian},
   booktitle={Networked systems design and implementation (NSDI)},
   year={2010},
-  topics={resource}
+  topics={resource},
   URL={papers/nsdi2010-entact.pdf}
 }
 
@@ -530,7 +530,7 @@ selected   :: Selected papers
   author={Srikanth Kandula and Ratul Mahajan},
   booktitle={Internet measurement conference (IMC)},
   year={2009},
-  topics={astronomy}
+  topics={astronomy},
   URL={papers/imc2009-broom.pdf}
 }
 
@@ -539,8 +539,8 @@ selected   :: Selected papers
   author={Srikanth Kandula and Ratul Mahajan and Patrick Verkaik and Sharad Agarwal and Jitendra Padhye and Paramvir Bahl},
   booktitle={SIGCOMM},
   year={2009},
-  topics={diagnosis}
-  URL={papers/sigcomm2009-netmedic.pdf}
+  topics={diagnosis},
+  URL={papers/sigcomm2009-netmedic.pdf},
   resource={<a href=talks/sigcomm2009-netmedic.pptx>SIGCOMM talk</a>}
 }
 
@@ -548,8 +548,8 @@ selected   :: Selected papers
   title={Wi-Fi networks are underutilized},
   author={Raghavendra, R. and Jitendra Padhye and Ratul Mahajan and Belding, E.},
   year={2009},
-  howpublished={MSR Technical report}
-  topics={wireless}
+  howpublished={MSR Technical report},
+  topics={wireless},
   URL={papers/tr2009-wifi-underutilized.pdf}
 }
 
@@ -557,9 +557,9 @@ selected   :: Selected papers
   title={How to build a research system in your spare time},
   author={Ratul Mahajan},
   journal={Computer communication review (CCR)},
-  year={2010}
-  topics={misc}
-  URL={papers/ccr2010-howto.pdf}
+  year={2010},
+  topics={misc},
+  URL={papers/ccr2010-howto.pdf},
   resource={<a href=talks/keynote-conext-2009.pptx>CoNext keynote</a>}
 }
 
@@ -569,9 +569,9 @@ selected   :: Selected papers
   title={Can you fool me? towards automatically checking protocol gullibility},
   author={Milan Stanojevic and Ratul Mahajan and Todd Millstein and Madan Musuvathi},
   year={2008},
-  booktitle={HotNets}
-  topics={protocols}
-  URL={papers/hotnets2008-gullibility.pdf}
+  booktitle={HotNets},
+  topics={protocols},
+  URL={papers/hotnets2008-gullibility.pdf},
   resource={<a href=talks/hotnets2008-gullibility.pptx>HotNets talk</a>}
 }
 
@@ -579,9 +579,9 @@ selected   :: Selected papers
   title={Eat all you can in an all-you-can-eat buffet: A case for aggressive resource usage},
   author={Ratul Mahajan and Jitendra Padhye and Ramya Raghavendra and Brian Zill},
   year={2008},
-  booktitle={HotNets}
-  topics={resource}
-  URL={papers/hotnets2008-buffet.pdf}
+  booktitle={HotNets},
+  topics={resource},
+  URL={papers/hotnets2008-buffet.pdf},
   resource={<a href=talks/hotnets2008-buffet.pptx>HotNets talk</a>}
 }
 
@@ -590,8 +590,8 @@ selected   :: Selected papers
   author={Aruna Balasubramanian and Ratul Mahajan and Arun Venkataramani and Brian N. Levine and John Zahorjan},
   booktitle={SIGCOMM},
   year={2008},
-  topics={vehicular}
-  URL={papers/sigcomm2008-vifi.pdf}
+  topics={vehicular},
+  URL={papers/sigcomm2008-vifi.pdf},
   resource={<a href=papers/tr2008-vifi.pdf>Extended version</a>}
 }
 
@@ -600,7 +600,7 @@ selected   :: Selected papers
   author={Ranveer Chandra and Ratul Mahajan and Thomas Moscibroda and Ramya Raghavendra and Paramvir Bahl},
   booktitle={SIGCOMM},
   year={2008},
-  topics={wireless}
+  topics={wireless},
   URL={papers/sigcomm2008-cwidth.pdf}
 }
 
@@ -609,7 +609,7 @@ selected   :: Selected papers
   author={Yi Li and Lili Qiu and Yin Zhang and Ratul Mahajan and Eric Rozner},
   booktitle={SIGCOMM},
   year={2008},
-  topics={wireless}
+  topics={wireless},
   URL={papers/sigcomm2008-predopt.pdf}
 }
 
@@ -618,7 +618,7 @@ selected   :: Selected papers
   author={Ratul Mahajan and Ming Zhang and Lindsey Poole and Vivek Pai},
   journal={Networked Systems Design and Implementation (NSDI)},
   year={2008},
-  topics={astronomy}
+  topics={astronomy},
   URL={papers/nsdi2008-netdiff.pdf}
 }
 
@@ -626,8 +626,8 @@ selected   :: Selected papers
   title={E pluribus unum: High performance connectivity on buses},
   author={Ratul Mahajan and Jitendra Padhye and Sharad Agarwal and Brian Zill},
   year={2009},
-  howpublished={MSR Technical Report}
-  topics={vehicular ignore}
+  howpublished={MSR Technical Report},
+  topics={vehicular ignore},
   URL={papers/tr2009-pluribus.pdf}
 }
 
@@ -640,9 +640,9 @@ selected   :: Selected papers
   title={Effects of interference on wireless mesh networks: Pathologies and a preliminary solution},
   author={Yi Li and Lili Qiu and Yin Zhang and Ratul Mahajan and Zifei Zhong and Gaurav Deshpande and Eric Rozner},
   year={2007},
-  booktitle={HotNets}
-  topics={wireless}  
-  URL={papers/hotnets2007-interference-routing.pdf}
+  booktitle={HotNets},
+  topics={wireless},
+  URL={papers/hotnets2007-interference-routing.pdf},
   resource={<a href=talks/hotnets2007-interference.pptx>HotNets talk</a>}
 }
 
@@ -651,8 +651,8 @@ selected   :: Selected papers
   author={Ratul Mahajan and John Zahorjan and Brian Zill},
   journal={Internet measurement confernece (IMC)},
   year={2007},
-  topics={vehicular}
-  URL={papers/imc2007-vanlan.pdf}
+  topics={vehicular},
+  URL={papers/imc2007-vanlan.pdf},
   resource={<a href=talks/imc2007-vanlan.pptx>IMC talk</a>}
 }
 
@@ -661,7 +661,7 @@ selected   :: Selected papers
   author={Lili Qiu and Yin Zhang and Feng Wang and Mi Kyung Han and Ratul Mahajan},
   booktitle={MobiCom},
   year={2007},
-  topics={wireless}
+  topics={wireless},
   URL={papers/mobicom2007-interference-model.pdf}
 }
 
@@ -669,9 +669,9 @@ selected   :: Selected papers
   title={Mutually controlled routing with independent ISPs},
   author={Ratul Mahajan and David Wetherall and Tom Anderson},
   booktitle={Networked Systems Design and Implementation (NSDI)},
-  year={2007}
-  topics={incentives}
-  URL={papers/nsdi2007-wiser.pdf}
+  year={2007},
+  topics={incentives},
+  URL={papers/nsdi2007-wiser.pdf},
   resource={<a href=talks/nsdi2007-wiser.ppt>NSDI talk</a> | <a href=talks/nanog2006-wiser.ppt>NANOG 37 talk</a>}
 }
 
@@ -683,8 +683,8 @@ selected   :: Selected papers
   author={Ratul Mahajan and Maya Rodrig and David Wetherall and John Zahorjan},
   booktitle={SIGCOMM},
   year={2006},
-  topics={wireless}
-  URL={papers/sigcomm2006-wit.pdf}
+  topics={wireless},
+  URL={papers/sigcomm2006-wit.pdf},
   resource={<a href=talks/sigcomm2006-wit.ppt>SIGCOMM talk</a>}
 }
 
@@ -693,17 +693,17 @@ selected   :: Selected papers
   author={Charles Reis and Ratul Mahajan and Maya Rodrig and David Wetherall and John Zahorjan},
   booktitle={SIGCOMM},
   year={2006},
-  topics={wireless}
+  topics={wireless},
   URL={papers/sigcomm2006-interference.pdf}
 }
 
 @misc{mahajan2006polytheistic,
   title={A Polytheistic Approach to Securing Interdomain Routing},
   author={Ratul Mahajan},
-  howpublished={WIRED workshop (invited position paper)}
+  howpublished={WIRED workshop (invited position paper)},
   year={2006},
-  topics={incentives}
-  URL={papers/wired2006-polytheistic.pdf}
+  topics={incentives},
+  URL={papers/wired2006-polytheistic.pdf},
   resource={<a href=talks/wired2006-poly.ppt>WIRED talk</a>}
 }
 
@@ -714,8 +714,8 @@ selected   :: Selected papers
   title={Practical and efficient internet routing with competing interests},
   author={Ratul Mahajan},
   year={2005},
-  howpublished={PhD Thesis}
-  topics={incentives}
+  howpublished={PhD Thesis},
+  topics={incentives},
   URL={papers/thesis.pdf}
 }
 
@@ -723,8 +723,8 @@ selected   :: Selected papers
   title={Measurement-based characterization of 802.11 in a hotspot setting},
   author={Maya Rodrig and Charles Reis and Ratul Mahajan and David Wetherall and John Zahorjan},
   booktitle={Workshop on Experimental approaches to wireless network design and analysis (E-WIND)},
-  year={2005}
-  topics={wireless}
+  year={2005},
+  topics={wireless},
   URL={papers/ewind2005-hotspot.pdf}
 }
 
@@ -733,7 +733,7 @@ selected   :: Selected papers
   author={Ratul Mahajan and Maya Rodrig and David Wetherall and John Zahorjan},
   booktitle={Networked Systems Design and Implementation (NSDI)},
   year={2005},
-  topics={incentives}
+  topics={incentives},
   URL={papers/nsdi2005-catch.pdf}
 }
 
@@ -742,8 +742,8 @@ selected   :: Selected papers
   author={Ratul Mahajan and David Wetherall and Tom Anderson},
   booktitle={Networked Systems Design and Implementation (NSDI)},
   year={2005},
-  topics={incentives}
-  URL={papers/nsdi2005-nexit.pdf}
+  topics={incentives},
+  URL={papers/nsdi2005-nexit.pdf},
   resource={<a href=talks/nanog2004-nexit.pdf>NANOG 31 talk</a>}
 }
 
@@ -754,9 +754,9 @@ selected   :: Selected papers
   title={Towards coordinated interdomain traffic engineering},
   author={Ratul Mahajan and David Wetherall and Tom Anderson},
   booktitle={HotNets},
-  year={2004}
-  topics={incentives}
-  URL={papers/hotnets2004-tearch.pdf}
+  year={2004},
+  topics={incentives},
+  URL={papers/hotnets2004-tearch.pdf},
   resource={<a href=talks/hotnets2004-tearch.pdf>HotNets talk</a>}
 }
 
@@ -765,7 +765,7 @@ selected   :: Selected papers
   author={Ratul Mahajan and Maya Rodrig and David Wetherall and John Zahorjan},
   booktitle={Workshop on Practice and theory of incentives in networked systems (PINS)},
   year={2004},
-  topics={incentives}
+  topics={incentives},
   URL={papers/pins2004-gt.pdf}
 }
 
@@ -774,8 +774,8 @@ selected   :: Selected papers
   author={Neil Spring and Ratul Mahajan and David Wetherall and Tom Anderson},
   journal={IEEE/ACM Transactions on Networking (ToN)},
   year={2004},
-  note={William R. Bennett Prize}
-  topics={astronomy}
+  note={William R. Bennett Prize},
+  topics={astronomy},
   URL={papers/ton2004-rocketfuel.pdf}
 }
 
@@ -787,8 +787,8 @@ selected   :: Selected papers
   author={Ratul Mahajan and Neil Spring and David Wetherall and Tom Anderson},
   booktitle={SOSP},
   year={2003},
-  topics={astronomy}
-  URL={papers/sosp2003-tulip.pdf}
+  topics={astronomy},
+  URL={papers/sosp2003-tulip.pdf},
   resource={<a href=talks/sosp2003-tulip.pdf>SOSP talk</a> | <a href=talks/nanog2004-tulip.pdf>NANOG 31 talk<a/>}
 }
 
@@ -797,7 +797,7 @@ selected   :: Selected papers
   author={Neil Spring and Ratul Mahajan and Tom Anderson},
   booktitle={SIGCOMM},
   year={2003},
-  topics={astronomy}
+  topics={astronomy},
   URL={papers/sigcomm2003-inflation.pdf}
 }
 
@@ -806,7 +806,7 @@ selected   :: Selected papers
   author={Sushant Jain and Ratul Mahajan and David Wetherall},
   booktitle={USENIX Symposium on Internet Technologies and Systems (USITS)},
   year={2003},
-  topics={overlays}
+  topics={overlays},
   URL={papers/usits2003-dhts.pdf}
 }
 
@@ -815,18 +815,18 @@ selected   :: Selected papers
   author={Ratul Mahajan and Miguel Castro and Ant Rowstron},
   booktitle={International Workshop on Peer-to-Peer Systems (IPTPS)},
   year={2003},
-  topics={overlays}
-  URL={papers/iptps03-reliability.pdf}
+  topics={overlays},
+  URL={papers/iptps03-reliability.pdf},
   resource={<a href=talks/iptps03-reliability.pdf>IPTPS talk</a>}
 }
 
 @misc{mahajan2003negotiation,
   title={Negotiation-based Routing},
   author={Ratul Mahajan},
-  howpublished={WIRED workshop (invited position paper)}
+  howpublished={WIRED workshop (invited position paper)},
   year={2003},
-  topics={incentives}
-  URL={papers/wired2003-negotiation.pdf}
+  topics={incentives},
+  URL={papers/wired2003-negotiation.pdf},
   resource={<a href=talks/wired2003-negotiation.pdf>WIRED talk</a>}
 }
 
@@ -838,8 +838,8 @@ selected   :: Selected papers
   author={Ratul Mahajan and Neil Spring and David Wetherall and Tom Anderson},
   booktitle={Workshop on Internet measurment (IMW)},
   year={2002},
-  topics={astronomy}
-  URL={papers/imw2002-weights.pdf}
+  topics={astronomy},
+  URL={papers/imw2002-weights.pdf},
   resource={<a href=talks/imw2002-weights.pdf>IMW talk</a>}
 }
 
@@ -848,9 +848,9 @@ selected   :: Selected papers
   author={Neil Spring and Ratul Mahajan and David Wetherall},
   journal={SIGCOMM},
   year={2002},
-  note={Best Student Paper Award}
-  topics={astronomy}
-  URL={papers/sigcomm2002-rocketfuel.pdf}
+  note={Best Student Paper Award},
+  topics={astronomy},
+  URL={papers/sigcomm2002-rocketfuel.pdf},
   resource={<a href=talks/ipam02-rocketfuel.pdf>IPAM talk</a>}
 }
 
@@ -859,8 +859,8 @@ selected   :: Selected papers
   author={Ratul Mahajan and David Wetherall and Tom Anderson},
   journal={SIGCOMM},
   year={2002},
-  topics={astronomy}
-  URL={papers/sigcomm2002-misconfigs.pdf}
+  topics={astronomy},
+  URL={papers/sigcomm2002-misconfigs.pdf},
   resource={<a href=talks/sigcomm2002-misconfigs.pdf>SIGCOMM talk</a>}
 }
 
@@ -869,7 +869,7 @@ selected   :: Selected papers
   author={Ratul Mahajan and Steve Bellovin and Sally Floyd and John Ioannidis and Vern Paxson and Scott Shenker},
   journal={Computer Communication Review (CCR)},
   year={2002},
-  topics={resource}
+  topics={resource},
   URL={papers/ccr2002-pushback.pdf}
 }
 
@@ -878,7 +878,7 @@ selected   :: Selected papers
   author={Sushant Jain and Ratul Mahajan and Dan Suciu},
   booktitle={World Wide Web (WWW)},
   year={2002},
-  topics={misc}
+  topics={misc},
   URL={papers/www2002-xslt.pdf}
 }
 
@@ -886,8 +886,8 @@ selected   :: Selected papers
   title={Scalable self-organizing overlays},
   author={Sushant Jain and Ratul Mahajan and David Wetherall and Gaetano Borriello and Steve Gribble},
   year={2002},
-  howpublished={UW-CSE Technical report}
-  topics={overlays}
+  howpublished={UW-CSE Technical report},
+  topics={overlays},
   URL={papers/tr2002-kudos.pdf}
 }
 
@@ -899,8 +899,8 @@ selected   :: Selected papers
   author={Ratul Mahajan and Sally Floyd and David Wetherall},
   booktitle={International Conference on Network Protocols (ICNP)},
   year={2001},
-  topics={resources}
-  URL={papers/icnp2001-red-pd.pdf}
+  topics={resources},
+  URL={papers/icnp2001-red-pd.pdf},
   resource={<a href=talks/icnp2001-red-pd.pdf>ICNP talk</a>}
 }
 
@@ -908,8 +908,8 @@ selected   :: Selected papers
   title={Pushback messages for controlling aggregates in the network},
   author={Sally Floyd and Steve Bellovin and John Ioannidis and Kirti Kompella and Ratul Mahajan and Vern Paxson},
   howpublished={Internet draft draft-floyd-pushback-messages-00.txt},
-  year={2001}
-  topics={resources ignore}
+  year={2001},
+  topics={resources ignore},
   URL={papers/id2001-pushback-messages.txt}
 }
 
@@ -920,8 +920,8 @@ selected   :: Selected papers
   title={Wireless LAN MAC protocols},
   author={Sushant Jain and Ratul Mahajan},
   howpublished={Unpblished report},
-  year={2000}
-  topics={wireless ignore}
+  year={2000},
+  topics={wireless ignore},
   URL={papers/wmac.pdf}
 }
 
