minor updates to pubs

--- a/pubs.bib
+++ b/pubs.bib
@@ -15,7 +15,7 @@ ignore     :: Papers that should be ignored
 selected   :: Selected papers
 @comment{---------------------2016---------------------}
 
-@inproceedings{ghobadi2016c,
+@inproceedings{ghobadi2016optical,
   title={Optical Layer Failures in a Large Backbone},
   author={Monia Ghobadi and Ratul Mahajan},
   booktitle={IMC},
@@ -25,7 +25,7 @@ selected   :: Selected papers
   note={Best Dataset Award}
 }
 
-@inproceedings{fayaz2016,
+@inproceedings{fayaz2016eficient,
   title={Efficient Network Reachability Analysis using a Succinct Control Plane Representation},
   author={Seyed K. Fayaz and Tushar Sharma and Ari Fogel and Ratul Mahajan and Todd Millstein and Vyas Sekar and George Varghese},
   booktitle={OSDI},
@@ -34,7 +34,7 @@ selected   :: Selected papers
   URL={papers/osdi2016-era.pdf},
 }
 
-@inproceedings{bjorner2016,
+@inproceedings{bjorner2016ddnf,
   title={ddNF: An Efficient Data Structure for Header Spaces},
   author={Nikolaj Bjørner and Garvit Juniwal and Ratul Mahajan and Sanjit A. Seshia and George Varghese},
   booktitle={Haifa Verification Conference (HVC)},
@@ -44,7 +44,7 @@ selected   :: Selected papers
   note={Best Paper Award}
 }
 
-@inproceedings{beckett2016,
+@inproceedings{beckett2016dont,
   title={Don't Mind the Gap: Bridging Network-wide Objectives and Device-level Configurations},
   author={Ryan Beckett and Ratul Mahajan and Jitu Padhye and Todd Millstein and David Walker},
   booktitle={SIGCOMM},
@@ -54,7 +54,7 @@ selected   :: Selected papers
   URL={papers/sigcomm2016-propane.pdf},
 }
 
-@inproceedings{ghobadi2016b,
+@inproceedings{ghobadi2016projector,
   title={ProjecToR: Agile Reconfigurable Datacenter Interconnect},
   author={Monia Ghobadi and Ratul Mahajan and Amar Phanishayee and Houman Rastegarfar and Pierre-Alexandre Blanche and Madeleine Glick and Daniel Kilper and Janardhan Kulkarni and Gireeja Ranade and Nikhil Devanur},
   booktitle={SIGCOMM},
@@ -63,7 +63,7 @@ selected   :: Selected papers
   URL={papers/sigcomm2016-projector.pdf},
 }
 
-@inproceedings{gember-jackson2016,
+@inproceedings{gember-jackson2016fast,
   title={Fast Control Plane Analysis Using an Abstract Representation},
   author={Aaron Gember-Jacobson and Raajay Viswanathan and Aditya Akella and Ratul Mahajan},
   booktitle={SIGCOMM},
@@ -72,7 +72,7 @@ selected   :: Selected papers
   URL={papers/sigcomm2016-arc.pdf},
 }
 
-@inproceedings{shen2016,
+@inproceedings{shen2016beam,
   title={Beam: Ending Monolithic Applications for Connected Devices},
   author={Chenguang Shen and Rayman Preet Singh and Amar Phanishayee and Aman Kansal and Ratul Mahajan},
   booktitle={Usenix ATC},
@@ -81,7 +81,7 @@ selected   :: Selected papers
   URL={papers/atc2016-beam.pdf},
 }
 
-@article{filer2016,
+@article{filer2016elastic,
   title={Elastic Optical Networking in the {Microsoft} Cloud},
   author={Mark Filer and Jamie Gaudette and Monia Ghobadi and Ratul Mahajan and Tom Issenhuth and Buddy Klinkers and Jeff Cox},
   journal={Journal of Optical Communications and Networking (JOCN)},
@@ -90,7 +90,7 @@ selected   :: Selected papers
   URL={papers/jocn2016-elastic-optical-networks.pdf},
 }
 
-@inproceedings{forster2016,
+@inproceedings{forster2016consistent,
   title={Consistent Updates in Software Defined Networks: On Dependencies, Loop Freedom, and Blackholes},
   author={Klaus-Tycho Forster and Ratul Mahajan and Roger Wattenhofer},
   booktitle={IFIP Networking},
@@ -99,7 +99,7 @@ selected   :: Selected papers
   URL={papers/networking2016-consistentupdates.pdf},
 }
 
-@inproceedings{ghobadi2016a,
+@inproceedings{ghobadi2016evaluation,
   title={Evaluation of Elastic Modulation Gains in {Microsoft’s} Optical Backbone in {North America}},
   author={Monia Ghobadi and Jamie Gaudette and Ratul Mahajan and Amar Phanishayee and Buddy Klinkers and Daniel Kilper},
   booktitle={OFC},
@@ -108,7 +108,7 @@ selected   :: Selected papers
   URL={papers/ofc2016-bvt.pdf},
 }
 
-@inproceedings{liu2016,
+@inproceedings{liu2016efficiently,
   title={Efficiently Delivering Online Service over Integrated Infrastructure},
   author={Hongqiang Harry Liu and Raajay Viswanathan and Matt Calder and Aditya Akella and Ratul Mahajan and Jitendra Padhye and Ming Zhang},
   booktitle={NSDI},
@@ -121,7 +121,7 @@ selected   :: Selected papers
 
 @comment{---------------------2015---------------------}
 
-@inproceedings{gember-jacobson2015,
+@inproceedings{gember-jacobson2015management,
 	title={Management Plane Analytics},
 	author={Aaron Gember-Jacobson and Wenfei Wu and Xiujun Liu and Aditya Akella and Ratul Mahajan},
 	booktitle={IMC},
@@ -130,7 +130,7 @@ selected   :: Selected papers
 	URL={papers/imc2015-mpa.pdf},
 }
 
-@inproceedings{calder2015,
+@inproceedings{calder2015analyzing,
 	title={Analyzing the Performance of an Anycast {CDN}},
 	author={Matt Calder and Ethan Katz-Bassett and Ratul Mahajan and Jitu Padhye},
 	booktitle={IMC}, 
@@ -139,7 +139,7 @@ selected   :: Selected papers
 	URL={papers/imc2015-anycast.pdf}
 }
 
-@techreport{zeng2015,
+@techreport{zeng2015measuring,
   title={Measuring and Troubleshooting Large Operational Multipath Networks with Gray Box Testing},
   author={Hongyi Zeng and Ratul Mahajan and  Nick McKeown and George Varghese and Lihua Yuan and Ming Zhang},
   year={2015},
@@ -216,7 +216,7 @@ selected   :: Selected papers
 @inproceedings{liu2014traffic,
   author={Hongqiang Harry Liu and Srikanth Kandula and Ratul Mahajan and Ming Zhang and David Gelernter},
   title={Traffic Engineering with Forward Fault Correction},
-  booktitle={ACM SIGCOMM},
+  booktitle={SIGCOMM},
   year={2014},
   URL={papers/sigcomm2014-ffc.pdf},
   resource={<a href=papers/tr2014-ffc-appendix.pdf>Appendix</a>},
@@ -226,7 +226,7 @@ selected   :: Selected papers
 @inproceedings{jin2014dynamic,
    author={Xin Jin and Hongqiang Harry Liu and Rohan Gandhi and Srikanth Kandula and Ratul Mahajan and Ming Zhang and Jennifer Rexford and Roger Wattenhofer},
    title={Dynamic Scheduling of Network Updates},
-   booktitle={ACM SIGCOMM},
+   booktitle={SIGCOMM},
    year={2014},
    URL={papers/sigcomm2014-dionysus.pdf},
    resource={<a href=papers/tr2014-dionysus.pdf>Extended version</a>},
@@ -236,7 +236,7 @@ selected   :: Selected papers
 @inproceedings{sun2014network,
    author={Peng Sun and Ratul Mahajan and Jennifer Rexford and Lihua Yuan and Ming Zhang and Ahsan Arefin}, 
    title={A Network-State Management Service},
-   booktitle={ACM SIGCOMM},
+   booktitle={SIGCOMM},
    year={2014},
    URL={papers/sigcomm2014-statesman.pdf},
    topics={sdn}
@@ -292,7 +292,7 @@ selected   :: Selected papers
 }
 
 @inproceedings{hong2013achieving,
-  title={Achieving High Utilization with Software-driven WAN},
+  title={Achieving High Utilization with Software-driven {WAN}},
   author={Chi-Yao Hong and Srikanth Kandula and Ratul Mahajan and Ming Zhang and Vijay Gill and Mohan Nanduri and Roger Wattenhofer},
   booktitle={SIGCOMM},
   year={2013},
