minor updates to pubs

--- a/pubs.bib
+++ b/pubs.bib
@@ -13,6 +13,19 @@ overlays   :: Overlays and peer-to-peer
 misc       :: Miscellaneous
 ignore     :: Papers that should be ignored
 selected   :: Selected papers
+
+@comment{---------------------2017---------------------}
+
+@inproceedings{zhuo2017rail,
+  title={{RAIL}: A Case for Redundant Arrays of Inexpensive Links in Data Center Networks}, 
+  author={Danyang Zhuo and Monia Ghobadi and Ratul Mahajan and Amar Phanishayee and Xuan Kelvin Zou and Hang Guan and Arvind Krishnamurthy and Thomas Anderson},
+    booktitle={NSDI},
+  year={2017},
+  topics={optical},
+  URL={papers/nsdi2017-rail.pdf},
+}
+
+
 @comment{---------------------2016---------------------}
 
 @inproceedings{ghobadi2016optical,
@@ -25,7 +38,7 @@ selected   :: Selected papers
   note={Best Dataset Award}
 }
 
-@inproceedings{fayaz2016eficient,
+@inproceedings{fayaz2016efficient,
   title={Efficient Network Reachability Analysis using a Succinct Control Plane Representation},
   author={Seyed K. Fayaz and Tushar Sharma and Ari Fogel and Ratul Mahajan and Todd Millstein and Vyas Sekar and George Varghese},
   booktitle={OSDI},
