--- a/pubs.bib
+++ b/pubs.bib
@@ -731,6 +731,7 @@ selected   :: Selected papers
   URL={papers/sigcomm2008-vifi.pdf},
   resource={<a href=papers/tr2008-vifi.pdf>Extended version</a>},
   acceptancerate={12},
+  impact={yes},
 }
 
 @inproceedings{chandra2008case,
@@ -791,6 +792,7 @@ selected   :: Selected papers
   URL={papers/imc2007-vanlan.pdf},
   resource={<a href=talks/imc2007-vanlan.pptx>IMC talk</a>},
   acceptancerate={28},
+  impact={yes},
 }
 
 @inproceedings{qiu2007general,
@@ -1031,7 +1033,8 @@ selected   :: Selected papers
   year={2002},
   topics={astronomy},
   URL={papers/sigcomm2002-misconfigs.pdf},
-  resource={<a href=talks/sigcomm2002-misconfigs.pdf>SIGCOMM talk</a>}
+  resource={<a href=talks/sigcomm2002-misconfigs.pdf>SIGCOMM talk</a>},
+  impact={yes},
 }
 
 @inproceedings{mahajan2002controlling,
