--- a/pubs.bib
+++ b/pubs.bib
@@ -13,6 +13,17 @@ selected   :: Selected papers
 
 @comment{---------------------2017---------------------}
 
+@inproceedings{beckett2017propane,
+  title={Network Configuration Synthesis with Abstract Topologies}, 
+  author={Ryan Beckett and Ratul Mahajan and Jitu Padhye and Todd Millstein and David Walker},
+  booktitle={ACM PLDI},
+  month={Jun},
+  year={2017},
+  topics={protocols},
+  URL={papers/pldi2017-propane.pdf},
+  acceptancerate={15},
+}
+
 @inproceedings{zhuo2017rail,
   title={{RAIL}: A case for redundant arrays of inexpensive links in data center networks}, 
   author={Danyang Zhuo and Monia Ghobadi and Ratul Mahajan and Amar Phanishayee and Xuan Kelvin Zou and Hang Guan and Arvind Krishnamurthy and Thomas Anderson},
