added sigcomm 2017 papers

--- a/pubs.bib
+++ b/pubs.bib
@@ -13,6 +13,28 @@ selected   :: Selected papers
 
 @comment{---------------------2017---------------------}
 
+@inproceedings{beckett2017mineweeper,
+  title={A General Approach to Network Configuration Verification}, 
+  author={Ryan Beckett and Aarti Gupta and Ratul Mahajan and David Walker},
+  booktitle={ACM SIGCOMM},
+  month={Aug},
+  year={2017},
+  topics={protocols},
+  URL={papers/sigcomm2017-minesweeper.pdf},
+  acceptancerate={14},
+}
+
+@inproceedings{zhuo2017rail,
+  title={Understanding and mitigating packet corruption in data center networks}, 
+  author={Danyang Zhuo and Monia Ghobadi and Ratul Mahajan and Klaus-Tycho Förster and Arvind Krishnamurthy and Thomas Anderson},
+  booktitle={ACM SIGCOMM},
+  month={Aug},
+  year={2017},
+  topics={optical},
+  URL={papers/sigcomm2017-corropt.pdf},
+  acceptancerate={14},
+}
+
 @inproceedings{beckett2017propane,
   title={Network Configuration Synthesis with Abstract Topologies}, 
   author={Ryan Beckett and Ratul Mahajan and Jitu Padhye and Todd Millstein and David Walker},
