adding CPR and Future:Net talk

--- a/pubs.bib
+++ b/pubs.bib
@@ -13,6 +13,17 @@ selected   :: Selected papers
 
 @comment{---------------------2017---------------------}
 
+@inproceedings{gember-jackson2017cpr,
+  title={Automatically Repairing Network Control Planes Using an Abstract Representation}, 
+  author={Aaron Gember-Jacobson and Aditya Akella and Ratul Mahajan and Hongqiang Harry Liu},
+  booktitle={ACM SOSP},
+  month={Oct},
+  year={2017},
+  topics={protocols},
+  URL={papers/sosp2017-cpr.pdf},
+  acceptancerate={16},
+}
+
 @inproceedings{beckett2017mineweeper,
   title={A General Approach to Network Configuration Verification}, 
   author={Ryan Beckett and Aarti Gupta and Ratul Mahajan and David Walker},
