added Odin and blog pointer

--- a/pubs.bib
+++ b/pubs.bib
@@ -11,6 +11,19 @@ misc       :: Miscellaneous
 ignore     :: Papers that should be ignored
 selected   :: Selected papers
 
+@comment{---------------------2018---------------------}
+
+@inproceedings{calder2018odin,
+  title={Odin: {Microsoft’s} Scalable Fault-Tolerant {CDN} Measurement System}, 
+  author={Matt Calder and Manuel Schroder and Ryan Gao and Ryan Stewart and Jitendra Padhye and Ratul Mahajan and Ganesh Ananthanarayanan and Ethan Katz-Bassett},
+  booktitle={USENIX NSDI},
+  month={Apr},
+  year={2018},
+  topics={astronomy},
+  URL={papers/nsdi2018-odin.pdf},
+  acceptancerate={16},
+}
+
 @comment{---------------------2017---------------------}
 
 @inproceedings{gember-jackson2017cpr,
