--- a/pubs.bib
+++ b/pubs.bib
@@ -13,6 +13,17 @@ selected   :: Selected papers
 
 @comment{---------------------2018---------------------}
 
+@inproceedings{beckett2018bonsai,
+  title={Control Plane Compression}, 
+  author={Ryan Beckett and Aarti Gupta and Ratul Mahajan and David Walker},
+  booktitle={ACM SIGCOMM},
+  month={Aug},
+  year={2018},
+  topics={protocols},
+  URL={papers/sigcomm2018-bonsai.pdf},
+  acceptancerate={18},
+}
+
 @inproceedings{calder2018odin,
   title={Odin: {Microsoft’s} Scalable Fault-Tolerant {CDN} Measurement System}, 
   author={Matt Calder and Manuel Schroder and Ryan Gao and Ryan Stewart and Jitendra Padhye and Ratul Mahajan and Ganesh Ananthanarayanan and Ethan Katz-Bassett},
