add paper and extended version

--- a/pubs.bib
+++ b/pubs.bib
@@ -21,6 +21,7 @@ selected   :: Selected papers
   year={2018},
   topics={protocols},
   URL={papers/sigcomm2018-bonsai.pdf},
+  resource={<a href=https://arxiv.org/pdf/1806.08744.pdf>Extended version with proofs</a>},
   acceptancerate={18},
 }
 
